# molesp

./: .gitattributes  .gitignore  LICENSE-3RD-PARTY  MANIFEST.in  README.md  setup.cfg  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: ci-win.yaml  ci.yaml
cpp/: CMakeLists.txt  bindings.cpp  lookup.h  march.cpp  march.h  smooth.cpp  smooth.h  utilities.h
cpp/tests/: CMakeLists.txt  test_march.cpp
devtools/conda-envs/: test-env.yaml
gui/: index.html  package-lock.json  package.json  tsconfig.json
gui/src/: main.ts  mol-esp-app.ts  mol-esp-controls.ts
gui/src/core/: api.ts  models.ts  webgl-app.ts
gui/src/utilities/: camera-controller.ts  color-map.ts  elements.ts
molesp/: __init__.py  _version.py  models.py  utilities.py
molesp/cli/: __init__.py  _cli.py
molesp/gui/: __init__.py  _app.py  _launch.py
molesp/surfaces/: grids.py  mesh.py
